fixed issue with images and text aligning on product grid

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,6 @@
 
 
-/*this media query isn't working. Can someone help with why it's not working?*/
-@media only screen and (max-width: 1024px) {
+/*this media query isn't working. Can someone help with why it's not working?*/@media only screen and (max-width: 1024px) {
   .nav-condensed {
     display: block;
     color: white;
@@ -128,8 +127,6 @@ html body {
 
 #pen {
   align-items: center;
-  height: 13rem;
-  width: 13rem;
   border: 4px solid black;
 }
 
@@ -153,8 +150,6 @@ html body {
 
 
 #watch {
-  height: 13rem;
-  width: 13rem;
   border: 4px solid black;
 }
 
@@ -169,7 +164,6 @@ html body {
   text-align: center;
   color: white;
   background-color: black;
-  width: 13rem;
   height: 1.5rem;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -177,8 +171,6 @@ html body {
 }
 
 #glasses {
-  height: 13rem;
-  width: 13rem;
   border: 4px solid black;
 }
 
@@ -205,7 +197,8 @@ html body {
   padding-top: 3rem;
 }
 
-/* cannot figure out how to get h3s and images to line up correctly. help please?*/
+/* cannot figure out how to get h3s and images to line up correctly. help please?
+Answer was to remove h + w off image divs #pen,#watch,#glasses*/
 #location h3 {
   display: inline-block;
   color: white;
